--- a/01-ECM.Rmd
+++ b/01-ECM.Rmd
@@ -1,4 +1,5 @@
-# Exact Conditional Method疫苗有效性(Vaccine Efficacy)的样本量计算
+
+# 罕见病疫苗有效性样本量估计
 
 我们首先导入后面会用到的包，后续会用到dplyr的%>%管道函数和kableExtra输出表格。
 ```{r, echo = T,warning = F, message = F}
@@ -12,51 +13,51 @@ library(kableExtra)
 当我们检验一款新的疫苗是否有效时，通常会使用疫苗有效性$\pi$(Vaccine Efficacy)这个指标。让$P_1$, $P_2$分别为安慰剂组和接种疫苗组的发病率；$N_1$, $N_2$分别为安慰剂组和接种疫苗组的群体总数；$X, Y$分别为安慰剂和疫苗组的病例人数。则$X \overset{i.i.d}{\sim}\text{Binomial}(N_1, P_1)$, $Y \overset{i.i.d}{\sim}\text{Binomial}(N_2, P_2)$。 
 
 疫苗有效性为：
-\begin{equation} 
+$$
   \pi = 1-(P_2/P_1)
   (\#eq:pi)
-\end{equation} 
+$$
 原假设和备择假设为：
 
-\begin{equation} 
+$$
   H_0: \pi \leq \pi_0 \text{ versus } \ H_1:\pi>\pi_0   
   (\#eq:hypo1)
-\end{equation} 
+$$
 
 
 如果一个疾病发病率较低，我们就需要更多受试者参加实验，在这种情况下$X, Y$可以被近似成为独立的泊松分布，
 也就是$X \overset{i.i.d}{\sim}\text{Poisson}(\lambda_1)$, $Y \overset{i.i.d}{\sim}\text{Poisson}(\lambda_2)$ with $\lambda_1 = N_1\cdot P_1, \lambda_2 = N_2\cdot P_2$. 
 
 $Y$给定$T$的条件概率分布为 
-\begin{equation}
-  Y|T \sim \text{Binomial}(T, \theta)=\binom{T}{k} \theta^k(1-\theta)^{T-k}$ with $T = X + Y, \theta = \frac{\lambda_1}{\lambda_1=\lambda_2}
+$$
+  Y|T \sim \text{Binomial}(T, \theta)=\binom{T}{k} \theta^k(1-\theta)^{T-k} \text{with} T = X + Y, \theta = \frac{\lambda_1}{\lambda_1=\lambda_2}
   (\#eq:ycondt)
-\end{equation} 
+$$
 此时原假设和备择假设为：
 
-\begin{equation} 
+$$
   H_0: \theta \geq \theta_0 \text{ versus } \ H_1:\theta<\theta_0 \text{ where } \theta_0 = \frac{1-\pi_0}{2-\pi_0}
   (\#eq:hypo2)
-\end{equation} 
+$$
 
 
 - 计算的P value 公式为
-\begin{equation} 
+$$
   p = \Pr[Y \leq Y_{\text{obs}} \mid Y \sim \text{Binomial}(T, \theta_0)] = \sum_{k=0}^{Y_{\text{obs}}} \binom{T}{k} \theta_0^k (1 - \theta_0)^{T - k}
   (\#eq:pvalue)
-\end{equation} 
+$$
  
 - 计算Statistical power公式为
-\begin{equation} 
+$$
   1 - \beta = \Pr[Y \leq Y_c \mid Y \sim \text{Binomial}(T, \theta_1)] = \sum_{k=0}^{Y_c} \binom{T}{k} \theta_1^k (1 - \theta_1)^{T - k}
   (\#eq:power)
-\end{equation} 
+$$
 
 - 计算临床实验所需样本量公式为
-\begin{equation} 
+$$
   N_2 = T/[(2-\pi_1)/P_1]
   (\#eq:n2)
-\end{equation} 
+$$
 
 计算样本量所需的变量为$\pi_0, \pi_1, \alpha$, 期望统计功效(1-$\beta$)和安慰剂组发病率($P_1$)。
 
@@ -77,7 +78,9 @@ ect_sample_size <- function(T, pi0, pi1, incidence, alpha, power){
   theta0 <- (1-pi0) / (2-pi0)
   theta1 <- (1-pi1) / (2-pi1)
   table_t <- as.data.frame(do.call(rbind, 
-                               lapply(T, exact_conditonal_test, alpha = alpha, theta0= theta0, theta1 = theta1)), .name_repair = "unique")
+                               lapply(T, exact_conditonal_test, 
+                                      alpha = alpha, theta0= theta0, theta1 = theta1)), 
+                           .name_repair = "unique")
   colnames(table_t) <- c('T', 'Y_c', 'power', 'p-value')
   
   for (n in 1:nrow(table_t)){
@@ -112,7 +115,7 @@ T2N <- function(T_value, incidence, pi1, dropout_rate){
 ### 例1
 @chan_exact_1998 在其论文中详细阐述了exact conditional方法的理论推导，并提供了不同样本量下统计功效（power）与显著性水平（significance level）的对应表格。为验证该方法的计算准确性，我们可以调用`ect_sample_size()`函数进行实证分析。具体参数设置：病例范围33到40，$\pi_0=0.2,\pi_1=0.8, P_1=0.006, \alpha=0.025$, 目标统计功效为95%。将这些参数输入函数后，即可获得相应的样本量估计结果。
 
-```{r, echo = F}
+```{r, echo = F, out.width="100%"}
 knitr::include_graphics('image/Screenshot 2025-07-21 155606.png')
 ```
 
@@ -131,9 +134,9 @@ kbl(res1$T_table)%>%
 ```{r}
 res1$T
 ```
-打印结果显示 **T = 37**，与论文中的结果一致。接下来，利用公式 `\@ref(eq:n2)` 计算疫苗组所需的样本量。为了方便重复使用，我将该计算过程封装成了函数 `T2N()`。
+打印结果显示 **T = 37**，与论文中的结果一致。接下来，利用公式 \@ref(eq:n2) 计算疫苗组所需的样本量。为了方便重复使用，我将该计算过程封装成了函数 `T2N()`。
 
-在本示例中，未考虑受试者脱落情况，因此将 `dropout_rate` 参数设为 `0`。计算结果显示，疫苗组的样本量应不少于 **5138.889**。将该值乘以 2，即可得出疫苗组与安慰剂组的总样本量应不少于 **10277.78**，四舍五入后为 **10278**。
+在本示例中，未考虑受试者脱落情况，因此将 `dropout_rate` 参数设为 `0`。计算结果显示，疫苗组的样本量应不少于 **5138.889**。将该值乘以 2，即可得出疫苗组与安慰剂组的总样本量应不少于 **10277.78**，进一后为 **10278**。
 
 该结果与论文完全一致，说明我们的算法实现是正确的。
 。
@@ -142,7 +145,7 @@ T2N(37, incidence, pi1, dropout_rate = 0)
 ```
 
 ### HRV-三期
-```{r, echo = F}
+```{r, echo = F, out.width="100%"}
 knitr::include_graphics('image/Screenshot 2025-07-22 173413.png')
 ```
 
@@ -154,11 +157,11 @@ knitr::include_graphics('image/Screenshot 2025-07-22 173413.png')
 ### RV5 
 @mo_efficacy_2017 这篇论文将作为我们后续进行疫苗有效性检验样本量计算的参考文献。文中提供了以下参数：15% 的脱落率，\(\pi_0 = 0\)、\(\pi_1 = 0.6\)、\(P_1 = 0.02\)、显著性水平 \(\alpha = 0.025\)，以及期望的统计功效为 80%。
 
-代入上述参数后，可得所需的最小病例数为 47。为了方便分组，我们取双数为 48。接着，使用 `T2N()` 函数计算疫苗组所需的样本量，结果为至少 2016.807，向上取整后为 2020。该样本量结果与论文中的报告一致，验证了我们算法的正确性。
+代入上述参数后，可得所需的最小病例数为47。为了方便分组，我们取双数为48。接着，使用`T2N()`函数计算疫苗组所需的样本量，结果为至少2016.807，向上取整后为2020。该样本量结果与论文中的报告一致，验证了我们算法的正确性。
 
 
 
-```{r, echo = F}
+```{r, echo = F, out.width="100%"}
 knitr::include_graphics('image/Screenshot 2025-07-21 162616.png')
 ```
 
