modify pdf version documentclass

--- a/index.Rmd
+++ b/index.Rmd
@@ -3,8 +3,8 @@ title: "临床实验生物统计学方法R语言实例"
 author: "朱帅"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-documentclass: book
-bibliography: ["reference.bib"]
+documentclass: scrartcl    
+bibliography: ["reference.bib", "packages.bib"]
 url: https://shuaiz2020.github.io/stat-book
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
